--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 		"prepare": "husky install"
 	},
 	"lint-staged": {
-		"*.js": "npm run format-lint"
+		"*.{ts, tsx}": "npm run format-lint"
 	},
 	"dependencies": {
 		"axios": "^1.3.6",
