build: config env

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-API_URL="https://todos-api-xi.vercel.app/api/v1"
-NODE_ENV="local"
+VITE_API_URL=https://todos-api-xi.vercel.app/api/v1
+VITE_LOCAL_API_URL=http://localhost:3000/api/v1
